tests/lit/tcheck/funcall07.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2025-2026 Intel Corporation

function main() -> Integer
begin
    F(0, 1, 2);
    // CHECK: Type error: Unknown procedure F
end
